styles/typography.scss
@import url("https://use.typekit.net/uxq3ibn.css");

// TYPEFACES

:root {
  --font-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

:is(p, li, small) {
  font-family: grenadine-mvb, var(--font-stack);
  font-weight: 300;
}

:is(h3, h4, h5, h6, small) {
  font-family: captain-comic, var(--font-stack);
  letter-spacing: .03em;
}

h1, h2 {
  font-family: marvin, var(--font-stack);
}

// SIZING

:root {
  line-height: calc(1.5em + .6rem);
}

h1 {
  font-size: clamp(3rem, calc(1rem + 3vw), 6rem);
  margin-block: var(--pad-medium);
  text-align: center;
  line-height: 1em;
}

h2 {
  font-size: clamp(1.5rem, calc(1rem + 2vw), 5rem);
}

h3 {
  font-size: clamp(1rem, calc(1rem + .5vw), 4rem);
}

h4 {
  font-size: clamp(1.5rem, calc(1rem + .3vw), 3rem);
}

h5 {
  font-size: clamp(1.25rem, calc(1rem + .2vw), 2.5rem);
}

h6 {
  font-size: clamp(1rem, calc(1rem + .1vw), 2rem);
}

p {
  line-height: 1.8em;
  margin-block-start: var(--pad-small);
}

:is(p, ul, ol) + :is(h3, h4, h5, h6) {
  margin-block-start: var(--pad-medium);
  line-height: 1em;
}

:is(p, ul, ol) + :is(h2) {
  margin-block-start: var(--pad-large);
  margin-block-end: calc(var(--pad-small)*2);
}

:is(h2, h3, h4, h5, h6) + :is(h2, h3, h4, h5, h6) {
  margin-block-start: calc(var(--pad-small)*2);
}

// LISTS

main ul li::before {
  content: "\2730";
  color: var(--clr-brand);
  display: inline-block;
  width: 1em;
  margin-inline-start: -1.6em;
  margin-inline-end: .5em;
}

main ul li {
  margin-inline-start: 2.2em;
  margin-block-start: var(--pad-small);
}

main ol {
  list-style-type: decimal;
}

// BOLD, ITALICS, UNDERLINE

i, em {
  font-style: italic;
}

b, strong {
  font-weight: 500;
}

u {
  border-bottom: solid 1px var(--clr-primary);
}

// TEXT LINKS

a {
  background: linear-gradient(white 0 50%, var(--clr-brand) 50%);
  background-size: auto 3em;
  background-repeat: no-repeat;
  background-position: top;
  border-bottom: solid 2px var(--clr-brand);
  transition: 150ms ease-out;
}

a:hover,
a:focus {
  background-position: bottom;
}

footer a {
  background: linear-gradient(var(--clr-brand) 0 50%, var(--clr-bg) 50%);
  background-size: auto 3em;
  border-bottom: solid 2px var(--clr-bg);
}

